# my-ai-agents

fiverr-for-agent-mock-agent/: .gitignore  index.ts  package-lock.json  package.json  testSimpleComicAgent.ts
fiverr-for-agent-mock-agent/easy-explain-comic-agent/: types.ts
fiverr-for-agent-mock-agent/high-quality-research-agent/: graph.ts  types.ts
fiverr-for-agent-mock-agent/lib/: generateImage.ts
fiverr-for-agent-mock-agent/low-quality-research-agent/: graph.ts  (+1 more)
meme_deployer/: .gitignore  README.md  pyproject.toml
meme_deployer/output/: final.md  meme_tokens.md
meme_deployer/src/meme_deployer/: crew.py  main.py
meme_deployer/src/meme_deployer/config/: agents.yaml  tasks.yaml
meme_deployer/src/meme_deployer/tools/: download_image_tool.py  final_token_metadata_writer.py
meme_deployer/src/notion_py/: config.py
memecoin_qa_bot/: README.md  pyproject.toml  report.md
memecoin_qa_bot/src/memecoin_qa_bot/: crew.py  main.py
memecoin_qa_bot/src/memecoin_qa_bot/config/: agents.yaml  tasks.yaml
memecoin_qa_bot/src/memecoin_qa_bot/tools/: bscscan_tool.py  coingecko_tool.py
my_memecoin_summarizer_crew/: .gitignore  README.md  meme_data.json  meme_report.txt  poem.txt  pyproject.toml
my_memecoin_summarizer_crew/data/: meme_data.json
my_memecoin_summarizer_crew/output/: meme_report.txt
my_memecoin_summarizer_crew/src/my_memecoin_summarizer_crew/: main.py
my_memecoin_summarizer_crew/src/my_memecoin_summarizer_crew/crews/gmail_crew/: gmail_crew.py
my_memecoin_summarizer_crew/src/my_memecoin_summarizer_crew/crews/gmail_crew/tools/: gmail_tool.py  gmail_utility.py
my_memecoin_summarizer_crew/src/my_memecoin_summarizer_crew/crews/summary_crew/: summary_crew.py
my_memecoin_summarizer_crew/src/my_memecoin_summarizer_crew/crews/summary_crew/config/: agents.yaml  tasks.yaml
my_memecoin_summarizer_crew/src/my_memecoin_summarizer_crew/crews/summary_crew/tools/: dexscreener_tool.py
summarizer_bot/: README.md  pyproject.toml  report.md
summarizer_bot/src/summarizer_bot/: crew.py  main.py
summarizer_bot/src/summarizer_bot/config/: agents.yaml  tasks.yaml
token_tracker/: README.md  pyproject.toml
token_tracker/datas/: token_data.json
token_tracker/reports/: token_report.md
token_tracker/src/: notion_uploader.py
token_tracker/src/token_tracker/: crew.py  main.py
token_tracker/src/token_tracker/config/: agents.yaml  tasks.yaml
trending_scraper/: .gitignore  README.md  final.py  pyproject.toml  report.md  trend.md
trending_scraper/output/: explained_trends.md  final.md  google.md  namunews.md  namuwiki.md  scrapped_site.md  scrapped_site.txt  signal.md  x.md
trending_scraper/src/: notion_trends_uploader.py  notion_uploader.py
trending_scraper/src/trending_scraper/: crew.py  main.py
trending_scraper/src/trending_scraper/config/: agents.yaml  tasks.yaml
website_developer/: README.md  pyproject.toml
website_developer/output/: deployment_report.md  metadatas.json  token_metadata.json
website_developer/output/moods/: token_mood.json
website_developer/output/sites/DEFCON/: index.html
website_developer/output/sites/DJKLO/: index.html
website_developer/output/sites/DMZ/: index.html
website_developer/output/sites/DOLBU/: index.html
website_developer/output/sites/ENEWS/: index.html
website_developer/output/sites/HSH/: index.html
website_developer/output/sites/JHHUSTLE/: index.html
website_developer/output/sites/JJFAD/: index.html
website_developer/output/sites/JWS/: index.html
website_developer/output/sites/KUNHEE/: index.html
website_developer/output/sites/MNJMOON/: index.html
website_developer/output/sites/PTAE/: index.html
website_developer/output/sites/SHINE/: index.html
website_developer/output/sites/SNGL/: index.html
website_developer/output/sites/SONGO/: index.html
website_developer/output/sites/WONDR/: index.html
website_developer/output/sites/YERI/: index.html
website_developer/output/sites/YKYNG/: index.html
website_developer/output/sites/YSY/: index.html
website_developer/src/utils/: deploy_website.py
website_developer/src/website_developer/: crew.py  main.py
website_developer/src/website_developer/config/: agents.yaml  layout_patterns.yaml  tasks.yaml
website_developer/src/website_developer/tools/: layout_matcher.py
website_developer/templates/: page_template.html
(+12 files in other folders)
