[project]
name = "meme_deployer"
version = "0.1.0"
description = "meme-deployer using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
meme_deployer = "meme_deployer.main:run"
run_crew = "meme_deployer.main:run"
train = "meme_deployer.main:train"
replay = "meme_deployer.main:replay"
test = "meme_deployer.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
