[project]
name = "my_memecoin_summarizer_crew"
version = "0.1.0"
description = "my-memecoin-summarizer-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0",
]

[project.scripts]
kickoff = "my_memecoin_summarizer_crew.main:kickoff"
plot = "my_memecoin_summarizer_crew.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
