[project]
name = "summarizer_bot"
version = "0.1.0"
description = "summarizer-bot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.83.0,<1.0.0"
]

[project.scripts]
summarizer_bot = "summarizer_bot.main:run"
run_crew = "summarizer_bot.main:run"
train = "summarizer_bot.main:train"
replay = "summarizer_bot.main:replay"
test = "summarizer_bot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
