[project]
name = "token_tracker"
version = "0.1.0"
description = "token-tracker using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0",
    "notion-client"
]

[project.scripts]
token_tracker = "token_tracker.main:run"
run_crew = "token_tracker.main:run"
train = "token_tracker.main:train"
replay = "token_tracker.main:replay"
test = "token_tracker.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
